# copier-python

./: .copier-answers.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MAINTAINING.md  README.md  copier.yaml  pyproject.toml  zensical.toml
.github/workflows/: audit.yaml  ci.yaml  docs.yaml  release.yaml
copier_python/: __init__.py  __main__.py  repo.py  update.py
docs/: api.md  changelog.md  contributing.md  index.md  license.md  maintaining.md  prerequisites.md  project-creation.md  project-development.md  project-features.md  project-release.md  project-setup.md  project-updates.md  releasing.md  requirements.md  setup.md
docs/development/: updates.md  workflow.md
includes/: docs.jinja  python.jinja
includes/licenses/: BSD-3-Clause  ISC
template/: .gitignore.jinja  .pre-commit-config.yaml.jinja  AGENTS.md.jinja  CHANGELOG.md.jinja  CONTRIBUTING.md.jinja  LICENSE.jinja  README.md.jinja  pyproject.toml.jinja  {% if enable_container %}Dockerfile{% endif %}.jinja  {% if enable_container and project_type == 'application' %}compose.yaml{% endif %}.jinja  {% if enable_docs %}zensical.toml{% endif %}.jinja  {% if project_visibility == 'public' %}MAINTAINING.md{% endif %}.jinja
template/tests/: test_version.py.jinja
template/{% if enable_docs %}docs{% endif %}/: api.md.jinja  changelog.md.jinja  contributing.md.jinja  index.md.jinja  license.md.jinja  maintaining.md.jinja  {% if project_visibility == 'public' %}releasing.md{% endif %}.jinja  {% if project_visibility == 'public' %}setup.md{% endif %}.jinja
template/{% if enable_docs %}docs{% endif %}/development/: requirements.md.jinja  updates.md.jinja  workflow.md.jinja
template/{% if project_visibility == 'public' %}.github{% endif %}/workflows/: ci.yaml.jinja  release.yaml.jinja  {% if enable_container %}container.yaml{% endif %}.jinja  {% if enable_container %}ghcr.yaml{% endif %}.jinja  {% if enable_docs %}docs.yaml{% endif %}.jinja  {% if enable_pypi %}release.yaml{% endif %}.jinja  {% if project_visibility == 'public' %}audit.yaml{% endif %}.jinja
template/{{project_slug}}/: __init__.py.jinja
tests/: conftest.py  test_contributing.py  test_dockerfile.py  test_docs.py  test_license.py  test_maintaining.py  test_pyproject.py  test_readme.py  test_structure.py  test_template.py  test_update.py  test_version.py  test_workflows.py  utils.py
tests/__snapshots__/: test_contributing.ambr  test_dockerfile.ambr  test_docs.ambr  test_license.ambr  test_maintaining.ambr  test_pyproject.ambr  test_readme.ambr  test_workflows.ambr  test_zensical.ambr
tests/template/: test_agents.py  test_compose.py  test_contributing.py  test_docs.py  test_license.py  test_pyproject.py  test_readme.py  test_template.py  test_zensical.py
tests/template/__snapshots__/: test_agents.ambr  test_compose.ambr  test_dockerfile.ambr  test_docs.ambr  test_pyproject.ambr  test_workflows.ambr
