[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "copier-python"
dynamic = ["version"]
description = "Copier template for Python projects with modern tooling"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Stephen Kent", email = "smkent@smkent.net" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = []
dependencies = []

[project.urls]
Homepage = "https://smkent.github.io/copier-python"
Repository = "https://github.com/smkent/copier-python"
Issues = "https://github.com/smkent/copier-python/issues"

[dependency-groups]
dev = [
    "bump-my-version>=1.3.0",
    "copier>=9",
    "poethepoet>=0.42",
    "prek>=0.3",
    "pysentry-rs>=0.4",
    "pytest>=9",
    "pytest-cov>=7",
    "pytest-sugar>=1",
    "pytest-xdist>=3",
    "syrupy>=5",
    "ruff>=0.15",
    "ty>=0.0.37",
]
docs = [
    "zensical>=0.0.42",
]

[tool.bumpversion]
commit = false
tag = true
tag_name = "v{new_version}"
tag_message = ""
push = true

[tool.hatch.build.targets.sdist]
include = ["/copier_python", "/tests", "*.md", "LICENSE"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.poe.executor]
type = "uv"

[tool.poe.tasks.audit]
cmd = "pysentry-rs"
help = "Run dependencies security audit"

[tool.poe.tasks.build]
cmd = "uv build"
help = "Build distribution package"

[tool.poe.tasks.docs-build]
cmd = "zensical build -c"
help = "Build documentation site"

[tool.poe.tasks.docs]
sequence = [
    {ref = "docs-build"},
    {cmd = "zensical serve -a \"${host}:${port}\""},
]
help = "Run documentation site locally"

[tool.poe.tasks.docs.args.host]
options = ['--host', '-h']
help = "Bind IP"
default = "localhost"

[tool.poe.tasks.docs.args.port]
positional = true
help = "Bind Port"
default = "8000"

[tool.poe.tasks.init]
sequence = [
    {shell = "[ ! -d .git ] || { echo \"git repository already exists\"; exit 1; }"},
    {cmd = "git init"},
    {ref = "setup"},
    {cmd = "git remote add origin https://github.com/smkent/copier-python"},
    {cmd = "git config --local remote.origin.pushurl git@github.com:smkent/copier-python.git"},
    {cmd = "git add ."},
    {cmd = "git commit -m 'Create project from template'"},
]
help = "Initialize git repository once on project creation"

[tool.poe.tasks.lint]
cmd = "prek run --all-files"
help = "Run all formatters and static checks"

[tool.poe.tasks.release]
cmd = "bump-my-version bump -v"
help = "Create and push a release tag (patch/minor/major)"

[tool.poe.tasks.lt]
sequence = [{ref = "lint"}, {ref = "test"}]
help = "Run all formatters, static checks and tests"

[tool.poe.tasks.setup]
sequence = [
    {cmd = "uv sync"},
    {cmd = "prek install"},
]
help = "Install project dependencies and git hooks"

[tool.poe.tasks.snapup]
cmd = "pytest --snapshot-update"
help = "Update test snapshots"

[tool.poe.tasks.test]
cmd = "pytest"
help = "Run tests"

[tool.poe.tasks.test-versions]
sequence = ["test-py310", "test-py311", "test-py312", "test-py313", "test-py314"]
help = "Run tests across all Python versions"

[tool.poe.tasks.test-py310]
cmd = "pytest"
executor = {isolated = true, python = "3.10"}
help = "Run tests using Python 3.10"

[tool.poe.tasks.test-py311]
cmd = "pytest"
executor = {isolated = true, python = "3.11"}
help = "Run tests using Python 3.11"

[tool.poe.tasks.test-py312]
cmd = "pytest"
executor = {isolated = true, python = "3.12"}
help = "Run tests using Python 3.12"

[tool.poe.tasks.test-py313]
cmd = "pytest"
executor = {isolated = true, python = "3.13"}
help = "Run tests using Python 3.13"

[tool.poe.tasks.test-py314]
cmd = "pytest"
executor = {isolated = true, python = "3.14"}
help = "Run tests using Python 3.14"

[tool.pytest]
addopts = [
    "-ra",
    "--cov=copier_python",
    "--strict-config",
    "--strict-markers",
    "-n",
    "auto",
]
testpaths = ["tests"]

[tool.coverage.run]
source = ["copier_python"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 79
output-format = "concise"
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "COM812",  # Trailing comma missing
    "D1",  # Missing docstring presence rules
    "EM",  # flake8-errmsg
    "G004",  # Logging statement uses f-string
    "PLR",  # pylint Refactor
    "S607",  # Starting a process with a partial executable path
    "TD",  # flake8-todos
    "TRY003", # Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.isort]
known-first-party = ["copier_python"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",  # flake8-unused-arguments
    "S101",  # Use of assert detected
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.terminal]
error-on-warning = true
output-format = "concise"

[tool.uv]
default-groups = ["dev", "docs"]

[tool.uv-dynamic-versioning]
pattern = "default"
fallback-version = "0.0.0"
